<resources>
    <string name="app_name">To-Do-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Registre-se</string>
    <string name="type_your_email">Digite seu e-mail</string>
    <string name="type_your_password">Digite sua senha</string>
    <string name="retype_your_password">Digite sua senha novamente</string>
    <string name="already_registered">Já registrado ? </string>
    <string name="sign_in">Entrar</string>
    <string name="not_registered">Não cadastrado?</string>
    <string name="type_your_task">Digite sua tarefa</string>
    <string name="title_activity_new_home">NewHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_today">Hoje</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_category">Categorias</string>

    <string name="menu_slideshow">Sobre</string>
    <string name="menu_gallery">Sobre</string>
    <string name="LoopSoftware">by Loop Softwares</string>
    <string name="app_description">O Loop To Do é a sua solução definitiva para organização e produtividade. Seja você um estudante ocupado, um profissional multitarefa ou alguém que simplesmente deseja manter a vida em ordem, este aplicativo é feito sob medida para você. É mais do que um simples aplicativo de lista de tarefas, é o seu parceiro confiável na jornada da produtividade</string>
    <string name="app_website">https://lucaslopes.netlify.app/</string>
    <string name="type_your_description">Digite sua descrição</string>
    <string name="menu_pomodoro">Pomodoro</string>

    <string name="txt_timer">Timer</string>
    <string name="start_pomodoro">Começar pomodoro</string>
    <string name="title_breaks">Número de intervalos:</string>
    <string name="title_time">Tempo (minuto):</string>
    <string name="title_dialog">Selecionar tempo</string>
    <string name="action_start">Começar</string>
    <string name="menu_calendar">Calendário</string>
    <string name="all_tasks_today">Todas tarefas do dia:</string>
</resources>