<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_date_range_24"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_pomodoro"
            android:icon="@drawable/baseline_access_time_24"
            android:title="@string/menu_pomodoro" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_person_pin_24"
            android:title="@string/menu_about" />
    </group>
</menu>