<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.loopssoftwares.to_do_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.loopssoftwares.to_do_app.ui.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_pomodoro"
        android:name="com.loopssoftwares.to_do_app.PomodoroFragment"
        android:label="@string/menu_pomodoro"
        tools:layout="@layout/fragment_pomodoro" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.loopssoftwares.to_do_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_slideshow"/>

</navigation>